--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 requests
 haversine
 httplib2
--e git://github.com/HTTP-APIs/hydra-python-core.git#egg=hydra_python_core
+git://github.com/pchampin/hydra-py.git#egg=hydra
+git+https://github.com/HTTP-APIs/hydrus.git@0.2#egg=hydrus
+git+https://github.com/HTTP-APIs/hydra-python-core@v0.1#egg=hydra_python_core
